Fix home blocks on mobile

--- a/styles/2_style.styl
+++ b/styles/2_style.styl
@@ -268,8 +268,6 @@ a
       color black
   h3
     font-weight 400
-    font-size 1.2rem
-    color black
 
 .subcontent
   padding 32px
