--- a/styles/3_aboutq42.styl
+++ b/styles/3_aboutq42.styl
@@ -77,7 +77,8 @@
         background-color rgba(0,0,0,.3)
 
       @media (max-width 620px)
-        font 20px 'Permanent Marker', cursive
+        font 14px titleFont
+        smallcaps()
         color #000
 
   .contactData
@@ -107,7 +108,7 @@
       height 150px
 
     h3
-      font 16px/1.3rem 'Permanent Marker', cursive
+      font 16px/1.3rem titleFont
       margin 0
       text-align center
 
