--- a/to-become-packages/home/client/style.styl
+++ b/to-become-packages/home/client/style.styl
@@ -12,6 +12,9 @@
   width 600px
   margin 0 auto
 
+  @media (max-width 600px)
+    width 100%
+
 .newsitem
   perspective 2000px
   fontSmoothing antialiased
